public/stylesheets/style.css
/**********************************************
 *  General
 **********************************************/
body {
	margin: 70px 0px;
	background: none repeat scroll 0% 0% #151924;
    background-image: url("/images/bg-grid.png");
    font-family: "PT Sans Narrow","Source Han Sans TWHK",sans-serif;
}

.no-under-line-link {
	text-decoration: none;
}

/**********************************************
 *  Header
 **********************************************/
.header-text {
	font-size: 50px;
	color: #fff;
	display: inline-block;
	margin: 0px 4px;
}

/**********************************************
 *  Stage
 **********************************************/
.stage {
	padding-top: 30px;
	display: block;
	width: 100%;
	height: 70px;
	font-size: 20px;
	background-color: #BA5347;
	color: #FFF;
}

.stage-text {
	font-size: 30px;
	margin-bottom: 10px;
}

.irc-link:link {
	text-decoration: none;
    color: #fff;
}

.irc-link:visited {
	text-decoration: none;
    color: #fff;
}

.irc-link:hover {
	text-decoration: none;
    color: #fff;
}

.irc-link:active {
	text-decoration: none;
    color: #fff;
}

/**********************************************
 *  Row with Responsive rules
 **********************************************/
.row-title {
	color: #fff;
	transform: translate(0px,35px);
}

@media screen and (min-width: 1231px) {
	.row {
		display: block;
		margin: 5px 0px;
	}

	.block-area {
		display: inline-block;
		margin: 20px;
		border: 1px solid;
		border-color: #fff;
		z-index: 4;
	}

	.left-block {
		transform: rotate(10deg);
		-webkit-transform:rotate(10deg);
	}

	.center-block {
		transform:translate(0px,30px);
		-webkit-transform:translate(0px,30px);
	}

	.right-block {
		transform: rotate(-10deg);
		-webkit-transform:rotate(-10deg);
	}

	.sit {
		display: inline-block;
		background-color: #fff;
		color: #FFF;
		width: 30px;
		height: 25px;
		border-radius: 15px;
		text-align: center;
		font-size: 20px;
		position: relative;
		z-index: 3;
		padding-top: 5px;
		margin: 2px;
		text-decoration: none;
	}

	.sit:hover {
		display: inline-block;
		color: #FFF;
		width: 30px;
		height: 25px;
		border-radius: 15px;
		text-align: center;
		font-size: 20px;
		padding-top: 5px;
		text-decoration:none
	}

	.sit:hover:after{
		background:#111;
		background:rgba(0,0,0,.8);
		border-radius:5px;
		bottom:46px;
		color:#fff;
		content:attr(title);
		display:block;
		left:0px;
		padding:5px 15px;
		position:absolute;
		white-space:nowrap;
		z-index:1
	}

	.sit:hover:before{
		border:solid;
	    border-color:#111 transparent;
	    border-width:6px 6px 0 6px;
	    bottom:40px;
	    content:"";
	    display:block;
	    left:6px;
	    position:absolute;
	    z-index:2
	}
}

@media screen and (min-width: 1020px) and (max-width: 1230px) {
	.row {
		display: block;
		margin: 15px 0px;
	}

	.block-area {
		display: inline-block;
		margin: 10px;
		border: 1px solid;
		border-color: #fff;
		z-index: 4;
	}

	.left-block {
		transform: rotate(15deg);
		-webkit-transform:rotate(15deg);
	}

	.center-block {
		transform:translate(0px,35px);
		-webkit-transform:translate(0px,35px);
	}

	.right-block {
		transform: rotate(-15deg);
		-webkit-transform:rotate(-15deg);
	}

	.sit {
		display: inline-block;
		background-color: #fff;
		color: #FFF;
		width: 25px;
		height: 20px;
		border-radius: 15px;
		text-align: center;
		font-size: 20px;
		position: relative;
		z-index: 3;
		padding-top: 5px;
		margin: 2px;
		text-decoration: none;
	}

	.sit:hover {
		display: inline-block;
		color: #FFF;
		width: 25px;
		height: 20px;
		border-radius: 15px;
		text-align: center;
		font-size: 20px;
		padding-top: 5px;
		text-decoration:none
	}

	.sit:hover:after{
		background:#111;
		background:rgba(0,0,0,.8);
		border-radius:5px;
		bottom:41px;
		color:#fff;
		content:attr(title);
		display:block;
		left:0px;
		padding:5px 15px;
		position:absolute;
		white-space:nowrap;
		z-index:1
	}

	.sit:hover:before{
		border:solid;
	    border-color:#111 transparent;
	    border-width:6px 6px 0 6px;
	    bottom:35px;
	    content:"";
	    display:block;
	    left:6px;
	    position:absolute;
	    z-index:2
	}
}

@media screen and (min-width: 0px) and (max-width: 1019px) {
	.row {
		display: block;
		margin: 15px 0px;
	}

	.block-area {
		display: inline-block;
		margin: 5px;
		border: 1px solid;
		border-color: #fff;
		z-index: 4;
	}

	.left-block {
		/*transform: rotate(15deg);*/
		/*-webkit-transform:rotate(15deg);*/
	}

	.center-block {
		/*transform:translate(0px,35px);*/
		/*-webkit-transform:translate(0px,35px);*/
	}

	.right-block {
		/*transform: rotate(-15deg);*/
		/*-webkit-transform:rotate(-15deg);*/
	}

	.sit {
		display: inline-block;
		background-color: #fff;
		color: #FFF;
		width: 20px;
		height: 15px;
		border-radius: 10px;
		text-align: center;
		font-size: 10px;
		position: relative;
		z-index: 3;
		padding-top: 5px;
		margin: 2px;
		text-decoration: none;
	}

	.sit:hover {
		display: inline-block;
		color: #FFF;
		width: 20px;
		height: 15px;
		border-radius: 10px;
		text-align: center;
		font-size: 20px;
		padding-top: 5px;
		text-decoration:none
	}

	.sit:hover:after{
		background:#111;
		background:rgba(0,0,0,.8);
		border-radius:5px;
		bottom:38px;
		color:#fff;
		content:attr(title);
		display:block;
		left:0px;
		padding:5px 15px;
		position:absolute;
		white-space:nowrap;
		z-index:1
	}

	.sit:hover:before{
		border:solid;
	    border-color:#111 transparent;
	    border-width:6px 6px 0 6px;
	    bottom:32px;
	    content:"";
	    display:block;
	    left:6px;
	    position:absolute;
	    z-index:2
	}

	.row-title {
		transform:translate(0px, -5px);
	}
}

.sitted {
	background-color: #222;
}

.selected {
	background-color: #60D0EE;
}

.meeting-room {
	margin-bottom: 70px;
}

.dark-cover {
	position: fixed;
	top: 0%;
	left: 0%;
	width: 100%;
	height: 100%;
	background-color:#000;
	z-index:101;
	-moz-opacity: 0.8;
	opacity:.80;
	filter: alpha(opacity=80);
}

.black-sit {
	background-color: #000 !important;
    border: 1px solid #fff !important;
    box-shadow: 0 0 50px 50px rgba(0, 0, 0, 0.8);
    position: relative;
    z-index: 100;
}

.gravatar-sit {
	background-repeat: no-repeat;
	background-position: 50%;
	background-size: 30px;
}

/**********************************************
 *  Side bar
 **********************************************/
.btn {
	display: inline-block;
	margin-bottom: 0;
	font-weight: 400;
	text-align: center;
	vertical-align: middle;
	cursor: pointer;
	background-image: none;
	border: 1px solid transparent;
	white-space: nowrap;
	padding: 6px 12px;
	font-size: 14px;
	line-height: 1.428571429;
	border-radius: 4px;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	-o-user-select: none;
}

.btn-modify-sit {
	color: #fff;
	background-color: #333;
	border-color: #444;
}

.btn-clear-sit {
	color: #fff;
	background-color: #333;
	border-color: #444;
}

.btn-black {
	color: #fff;
	background-color: #000;
	border-color: #fff;
}

.btn-white {
	color: #000;
	background-color: #fff;
	border-color: #000;
}

.menu-btn {
	position: fixed;
	background-color: #000;
	border: 1px solid;
	border-color: #fff;
	border-radius: 10px;
	padding: 10px;
	color: #FFF;
	z-index: 103;
	text-decoration: none;
	transition: .2s;
	transition-timing-function: linear;
}

.menu-btn:hover {
	background-color: #777;
}

.change-room-btn {
	top: 20%;
	right: 0%;
}

.change-room-btn-selected {
	background-color: #555;
}

/**********************************************
 *  Left side menu
 **********************************************/
.help-btn {
	top: 45%;
	left: 0;
}

.help {
	z-index: 101;
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

#modify-trigger-btn {
	top: 65%;
	left: 0;
	display: none;
}

/**********************************************
 *  Footer
 **********************************************/
.input-area {
	display: inline-block;
	margin: 12px 30px;
}

.footer {
	position: fixed;
	bottom: 0px;
	width: 100%;
	height: 50px;
	background-color: #BA5347;
	text-align: center;
	font-size: 1em;
	color: #FFF;
	z-index: 102;
}

/**********************************************
 *  Other Responsive rules
 **********************************************/
@media screen and (max-width: 697px) {
	.header-text {
		display: block;
	}
}

@media screen and (max-width: 1019px) {
	.input-area {
		display: block;
		margin: 12px 30px;
	}
	.footer {
		height: auto;
	}
}

@media screen and (max-height: 436px) {
	#modify-trigger-btn {
		display: inline;
	}
	.footer {
		display: none;
	}
}

